--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-scripts": "5.0.1",
     "tslib": "^2.5.0",
     "tsparticles": "^2.9.3",
-    "tsparticles-engine": "^2.9.3"
+    "tsparticles-engine": "^2.9.3",
+    "tsparticles-preset-links": "^2.9.3"
   },
   "scripts": {
     "start": "react-scripts start",
